# xgobi

./: CMakeLists.txt  Changes  Copyright  README.md  Readme.PC  Readme.S  Readme.install  XGobi.ex
S/: clust-docu.S  xgobi.S  xgobi.d  xgvis.S  xgvis.d
bitmaps/: Bellcore.xbm  downarrow.xbm  leftarrow.xbm  leftarrow20.xbm  lrarrow.xbm  minus.xbm  plus.xbm  rightarrow.xbm  rightarrow20.xbm  splash.xbm  strain_torgerson_gower.ps  strain_torgerson_gower.tex  strain_torgerson_gower.xbm  stress.xbm  stress_kruskal_shepard.ps  stress_kruskal_shepard.tex  stress_kruskal_shepard.xbm  stress_torgersen_gower.ps  stress_torgersen_gower.tex  stress_torgersen_gower.xbm  toff12.xbm  toff16.xbm  ton12.xbm  ton16.xbm  uparrow.xbm  xy.xbm  xy_mask.xbm
cmake/: xgobi_config.h.in
corba/: GNUmakefile  Readme
data_xgobi/: c60.linecolors  cube6.lines  death1987  death1987.col  death1987.lines  death1987.resources  death1987.row  flea.col  flea.colors  flea.glyphs  kai.doc  kai.lines  kai.resources  kai.row  laser.resources  olive.col  olive.colors  olive.glyphs  olive.resources  places  places.col  places.doc  places.resources  places.row  prim7  prim7.colors  prim7.doc  prim7.glyphs  prim7.lines  prim7.res  prim7.resources  randu  randu.doc  river  river.col  river.doc  sleep.col  sleep.doc  sleep.missing  sleep.row  (+6 more)
data_xgvis/: basket.edges  basket.pos  buckyball.linecolors  buckyball.resources  grid5.edges  grid5.pos  hyper8.edges  hyper8.pos  morsecodes.R  morsecodes.col  morsecodes.colors  morsecodes.dist  morsecodes.doc  morsecodes.linecolors  morsecodes.lines  morsecodes.raw  morsecodes.row  morsecodes.sim  perm4.edges  perm4.linecolors  perm4.pos  perm5.edges  perm5.pos  perm6.edges  perm6.labels  perm6.pos  torus1.edges  torus1.pos  torus2.edges  torus2.pos
help/: AV2XGErrTable  AboutXGobi  Br_BrushOn  Br_ColorMenu  Br_GlyphMenu  Br_PointsLines  Br_ResetMenu  Br_SendUpdate  Brush_Erase  Brush_Modes  CaseList  Corr_Backtrack  Corr_Manip  Corr_Optmz  Corr_Pause  Corr_Pursuit  Corr_Reinit  Corr_Sphere  Corr_SyncAxes  CreateFileSet  DisplayOptions  ExtendFileSet  FileMenu  Help  HideOrExclude  Id_RmLabels  Identify_Cycle  Jitter  JumpBrush  LE_AddLines  LE_RmAllLines  LE_RmLines  LE_ShowLines  LinkBrush  LinkIdent  LinkLineBrush  MP_Groups  MP_Reset  MissingData  Options  (+75 more)
makefiles/: Makefile  Readme
manpages/: xgobi.1  xgobi.html  xgvis.1  xgvis.html
ps/: xgobi.head.ps
src/: .purify  Corba.nw  DrawingA.c  DrawingA.h  DrawingAP.h  Imakefile  Makefile  Makefile.corba  README.corba  XGobiCorbaServer.idl  XGobiServer.h  aclocal.m4  ash1d.c  brush.c  brush_cbacks.c  brush_init.c  brush_send.c  callbacks.c  central_mass.c  corr.c  corr_index.c  corr_pursuit.c  corr_util.c  de_indices.c  diffs  dummy.c  exclusion.c  getfname.c  gt_ctls.c  help.c  hermite.c  holes.c  identify.c  inference.c  initialize.c  jitter.c  kernel.c  legendre.c  line_editor.c  make.out  (+81 more)
